# DriveBeyondBFMC

./: Readme.md  note.txt
devel/: .catkin  local_setup.sh  setup.sh
devel/include/utils/: IMU.h  localisation.h
devel/lib/example/: localisatonz_data.py  localization_kalman_filter.py
devel/lib/pkgconfig/: bno055_plugin.pc  car_plugin.pc  example.pc  gps_plugin.pc  sim_pkg.pc  traffic_light_pkg.pc  traffic_light_plugin.pc  utils.pc
devel/share/bno055_plugin/cmake/: bno055_pluginConfig.cmake
devel/share/car_plugin/cmake/: car_pluginConfig.cmake
devel/share/example/cmake/: exampleConfig.cmake
devel/share/gps_plugin/cmake/: gps_pluginConfig.cmake
src/: export.txt
src/example/: CMakeLists.txt  lane_navigation.py
src/example/project_1/: graph_data.sav
src/example/project_1/PY_BFMC/: check_image_size.py  graph_interactive.html  load_network.py  road_network_1.sav  route_network_create.py  test_A_gen.py
src/example/project_1/task_3/: control_follow_node.py  coordinates.txt
src/example/project_1/task_4/: experimentalControl.py  experimentalDetector.py
src/example/scripts/: position_log.txt  run.sh
src/example/scripts/PY_BFMC/: coordinates.txt  road_network.sav  route_create.py
src/example/scripts/task_2/: localization.py  localization_kalman_filter.py
src/example/scripts/task_3/: path_planning.py
src/example/src/: camera.py  camera1.py  control.py
src/models_pkg/camera_follow/: model.sdf
src/models_pkg/rcCar_assembly/: model.sdf
src/sim_pkg/: CMakeLists.txt
src/sim_pkg/launch/: map_with_all_objects.launch
(+23 files in other folders)
